--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "termctl"
 version = "0.1.0"
 edition = "2024"
+readme = "README.md"
+description = "small crate for controlling terminal output"
+repository = "https://github.com/amos-tg/termctl"
+license = "MIT OR Apache 2.0"
 
 [dependencies]
 anyhow = "1.0.98"
